lib/teams/team-riker/restrict-ingress-egress-riker.yaml
#https://github.com/ahmetb/kubernetes-network-policy-recipes
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-all
  namespace: team-riker
spec:
  podSelector: {}
  ingress:
    - {}
  egress:
    - {}
# apiVersion: networking.k8s.io/v1
# kind: NetworkPolicy
# metadata:
#   name: restrict-ingress-egress-riker
#   namespace: team-riker
# spec:
#   podSelector: {}
#   policyTypes:
#     - Ingress
#     - Egress
#   ingress:
#     - from:
#         - namespaceSelector: {}
#   #        matchLabels:
#   #          name: team-troi
#   #    ports:
#   #    - protocol: TCP
#   #      port: 80
#   egress:
#     - to:
#         - namespaceSelector:
#             matchLabels:
#               name: team-burnham
#       ports:
#         - protocol: TCP
#           port: 53
#         - protocol: UDP
#           port: 53
